# anyrust

./: Cargo.toml  README.md
anyrust/: Cargo.toml
anyrust/src/: lib.rs  main.rs
anyrust_macro/: Cargo.toml
src/: lib.rs  main.rs
