[package]
name = "anyrust"
version = "0.2.1"
edition = "2021"
authors = ["myyrakle <sssang97@naver.com>"]
description = "any rust"
keywords = ["any"]
license = "MIT"
include = ["src/lib.rs", "Cargo.toml"]
readme = "README.md"
repository = "https://github.com/myyrakle/anyrust"                          
documentation = "https://github.com/myyrakle/anyrust/blob/master/README.md" 
homepage = "https://github.com/myyrakle/anyrust/blob/master/README.md"      

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.16"
lazy_static = "1.4.0"
